[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/controls.png" type="Texture" id=1]
[ext_resource path="res://ControlScenes/Control.gd" type="Script" id=2]

[node name="touchControls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]

[node name="UP" type="Button" parent="Node"]
anchor_left = 0.0675214
anchor_top = 0.590741
anchor_right = 0.136752
anchor_bottom = 0.694444
margin_left = -7.62939e-06
margin_right = -1.52588e-05
rect_pivot_offset = Vector2( 42, 24 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RIGHT" type="Button" parent="Node"]
anchor_left = 0.146154
anchor_top = 0.725926
anchor_right = 0.199145
anchor_bottom = 0.85
rect_pivot_offset = Vector2( 42, 24 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LEFT" type="Button" parent="Node"]
anchor_left = 0.00598291
anchor_top = 0.724074
anchor_right = 0.0623932
anchor_bottom = 0.85
rect_pivot_offset = Vector2( 42, 24 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DOWN" type="Button" parent="Node"]
anchor_left = 0.0769231
anchor_top = 0.881482
anchor_right = 0.128205
anchor_bottom = 0.985185
margin_right = -1.52588e-05
rect_pivot_offset = Vector2( 42, 24 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SHOOTMODE" type="Button" parent="Node"]
anchor_left = 0.0726496
anchor_top = 0.718518
anchor_right = 0.135043
anchor_bottom = 0.844444
margin_right = -1.52588e-05
rect_pivot_offset = Vector2( 42, 24 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="controls" type="Sprite" parent="Node/SHOOTMODE"]
position = Vector2( 35.6878, 31.1639 )
scale = Vector2( 0.444814, 0.44277 )
texture = ExtResource( 1 )

[node name="timerSHOOT" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="toggleGUI" type="Button" parent="."]
margin_left = 26.0
margin_top = 21.0
margin_right = 131.0
margin_bottom = 53.0
focus_mode = 0
enabled_focus_mode = 0
text = "TOGGLE DPAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toggleGUIcooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
